--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,6 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    /> -->
+    <style>
+      .timer__items {
+        display: flex;
+        font-size: 30px;
+      }
+      .timer__item {
+        position: relative;
+        min-width: 60px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-bottom: 15px;
+        text-align: center;
+      }
+      .timer__item::before {
+        content: attr(data-title);
+        display: block;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+        font-size: 14px;
+      }
+      .timer__item:not(:last-child)::after {
+        content: ':';
+        position: absolute;
+        right: -15px;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -12,25 +44,25 @@
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
 
-    <div class="timer">
-      <div class="field">
+    <div class="timer timer__items">
+      <div class="field timer__item">
         <span class="value" data-days>00</span>
         <span class="label">Days</span>
       </div>
-      <div class="field">
+      <div class="field timer__item">
         <span class="value" data-hours>00</span>
         <span class="label">Hours</span>
       </div>
-      <div class="field">
+      <div class="field timer__item">
         <span class="value" data-minutes>00</span>
         <span class="label">Minutes</span>
       </div>
-      <div class="field">
+      <div class="field timer__item">
         <span class="value" data-seconds>00</span>
         <span class="label">Seconds</span>
       </div>
     </div>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script> -->
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
